[project]
name = "bumpkin"
dynamic = ["version"]
description = "Tool to do source bumps"
readme = "README.md"
dependencies = []

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.hatch.build.targets.wheel]
packages = ["bumpkin"]

[tool.hatch.version]
path = "bumpkin/VERSION"
pattern = "^(?P<version>[^$]*)"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov",
    "coverage",
    "gitchangelog",
    "mkdocs"
]

[project.scripts]
bumpkin = "bumpkin.__main__:main"
